@@ -35,7 +35,7 @@ Developer Version
 	- 1.0.7 Development
 	- 1.1.0 Development
 
-Building Steps: 2400
+Building Steps: 2410
 
 
 
@@ -62,6 +62,7 @@ Building Steps: 2400
  - changed: improvements on the backend layout
  - changed: usermanagement and profile now with the new framework objects
  - changed: dutch language update
+ - changed: added all new functionality for the postgresql database
 
  - added: captcha comment check for the image comments
  - added: possibillity to make a own target to the side and topmenu links
